--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8">
   <title>SynapseFi-UI Examples</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400, 500, 600,700,900" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700,500' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Khula:300,400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+  <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
 </head>
 
 <body>
